Updated design on top banner for test drive

--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
       <span class="cta-message">Programați astăzi un test drive</span>
       <div class="commercial-items">
         <span
-          >Fiți printre primii care descoperă vehiculul Model 3
-          îmbunătățit.</span
+          >Fiți printre primii care descoperă vehiculul Model 3 îmbunătățit.
+          <span
+            ><a class="test-drive-item" href="#dummy"
+              >Programați un test drive</a
+            ></span
+          ></span
         >
-        <span><a href="#dummy">Programați un test drive</a></span>
       </div>
     </div>
     <header class="navigation">
