updated buttons in navigation

--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
       <span class="cta-message">Programați astăzi un test drive</span>
       <div class="commercial-items">
         <span
-          >Fiți printre primii care descoperă vehiculul Model 3 îmbunătățit.
-          <span
-            ><a class="test-drive-item" href="#dummy"
-              >Programați un test drive</a
-            ></span
+          >Fiți printre primii care descoperă vehiculul Model 3
+          îmbunătățit.</span
+        >
+        <span
+          ><a class="test-drive-item" href="#dummy"
+            >Programați un test drive</a
           ></span
         >
       </div>
@@ -41,17 +42,17 @@
         <div class="middle-buttons">
           <ol>
             <li>
-              <button>
+              <button class="button">
                 <span>Vehicule</span>
               </button>
             </li>
             <li>
-              <button>
+              <button class="button">
                 <span>Încărcare</span>
               </button>
             </li>
             <li>
-              <button>
+              <button class="button">
                 <span>Descoperire</span>
               </button>
             </li>
